--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Page transition",
+  "name": "pagetransition",
   "version": "1.0.0",
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "description": "",
